...
@Composable
fun SearchScreenPreview() {
    SearchTheme {
        SearchScreen().SearchViewScreen(
            uiState = SearchUiState(
                searchText = "a",
                searchAutocompleteList = listOf("google", "yahoo", "bing")
            ),
            onSearchTextChanged = {},
            onRecommendationItemClicked = {})
    }
}
